--- a/index.html
+++ b/index.html
@@ -46,31 +46,31 @@
                             <!-- avatar -->
                             <a><img src="img/hd.jpg" class="unselectable"></a>
                             <!-- name -->
-                            <h1 class="unselectable">Dalin Huang</h1>
+                            <h1 class="unselectable">Amey Nerkar</h1>
                             <!-- role -->
-                            <h2 class="unselectable">Full Stack Developer</h2>
+                            <h2 class="unselectable">KEEP iNNOVATiNG... KEEP iNSPiRiNG..!!</h2>
                         </header>
                         <div class="profile-bio">
                             <p class="unselectable">
                                 Passionate about technology
-                                <br>Blockchain Enthusiast
+                                <br>Associate Cloud Engineer by Google
                             </p>
                         </div>
                         <!-- social links -->
                         <ul class="profile-social-links">
-                            <li><a target="_blank" href="https://ca.linkedin.com/in/dalinhuang">
+                            <li><a target="_blank" href="https://ca.linkedin.com/in/ameyyinvent">
                                     <i class="fa fa-lg fa-linkedin"></i>
                                 </a>
                             </li>
-                            <li><a target="_blank" href="https://stackoverflow.com/users/4739018/daniel-h?tab=profile">
+                            <li><a target="_blank" href="https://stackoverflow.com/users/">
                                     <i class="fa fa-lg fa-stack-overflow"></i>
                                 </a>
                             </li>
-                            <li><a target="_blank" href="https://github.com/dalinhuang99">
+                            <li><a target="_blank" href="https://github.com/ameyinvent">
                                     <i class="fa fa-lg fa-github-alt"></i>
                                 </a>
                             </li>
-                            <li><a target="_blank" href="https://www.facebook.com/dalin.huang.39">
+                            <li><a target="_blank" href="https://www.facebook.com/ameyinvent">
                                     <i class="fa fa-lg fa-facebook"></i>
                                 </a>
                             </li>
@@ -88,26 +88,26 @@
                 </div>
                 <div class="clearfix"></div>
                 <div class="about-me__content" id="terminal-start">
-                    <p>Last login: Thu Oct 12 00:28:38 2017 from
+                    <p>Last login: Thu Dec 05 00:28:38 1998 from
                         cpe44d9e79bd14b-cma84e3fd1a7d0.cpe.net.cable.rogers.com</p>
                     <pre style="border: none;">
          __|  __|_  )
          _|  (     /   Amazon Linux AMI
         ___|\___|___|
 
-Amazon Linux version 2017.09 is available.
+Amazon Linux version 2019.09 is available.
 </pre>
                     <br><br>
                     <div class="command">
                         <!-- email -->
                         <p>echo $email</p>
-                        <span class="hideme">email: dhuan023@gmail.com</span>
+                        <span class="hideme">email: amey.invent@gmail.com</span>
                         <!-- phone -->
                         <p>echo $phone</p>
-                        <span class="hideme">phone: (647)-927-XXXX</span>
+                        <span class="hideme">phone: </span>
                         <!-- address -->
                         <p>echo $address</p>
-                        <span class="hideme">address: Ottawa, ON, Canada</span>
+                        <span class="hideme">address: India</span>
                         <!-- education -->
                         <p>echo $education</p>
                         <span class="hideme">University of Ottawa • 2009 - 2014<br>
