--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
     <link rel="stylesheet" type="text/css" href="css/main.css?v=2018.09.20">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-   
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-162045600-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-162045600-1');
+</script>
 </head>
 
 <body>
