--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello World!</title>
+    <title>AMEY.iNVENT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- bootstrap 4.0.0-beta.2 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
@@ -56,12 +56,12 @@
                             <!-- name -->
                             <h1 class="unselectable">Amey Nerkar</h1>
                             <!-- role -->
-                            <h2 class="unselectable">KEEP iNNOVATiNG... KEEP iNSPiRiNG..!!</h2>
+                            <h2 class="unselectable">Lead DSC MITAOE</h2>
                         </header>
                         <div class="profile-bio">
                             <p class="unselectable">
-                                Passionate about technology
-                                <br>Associate Cloud Engineer by Google
+                                Google Associate Cloud Engineer
+                                <br>ML enthusiast
                             </p>
                         </div>
                         <!-- social links -->
