--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </header>
                         <div class="profile-bio">
                             <p class="unselectable">
-                                Google Associate Cloud Engineer
+                                Google Ass. Cloud Engineer
                                 <br>ML enthusiast
                             </p>
                         </div>
@@ -110,19 +110,17 @@ Amazon Linux version 2019.09 is available.
                         <!-- email -->
                         <p>echo $email</p>
                         <span class="hideme">email: amey.invent@gmail.com</span>
-                        <!-- phone -->
-                        <p>echo $phone</p>
-                        <span class="hideme">phone: </span>
+                        
                         <!-- address -->
                         <p>echo $address</p>
                         <span class="hideme">address: India</span>
                         <!-- education -->
                         <p>echo $education</p>
-                        <span class="hideme">University of Ottawa • 2009 - 2014<br>
-                            BSc: Specialization in Computer Science; Minor in Economics;</span>
+                        <span class="hideme">MIT Academy of Engineering<br>
+                            BTech in EnTC; Minor in IOT; honors in Product Design</span>
                         <!-- eligible_to_work -->
                         <p>echo $eligible_to_work</p>
-                        <span class="hideme">Permanent Resident of Canada</span>
+                        <span class="hideme">Permanent Resident of India</span>
                     </div>
                 </div>
             </div>
@@ -137,13 +135,13 @@ Amazon Linux version 2019.09 is available.
                     <p><label>Data:</label></p>
                     <div class="block-data">
                         <p>
-                            <label>Title:</label><b>Software Developer</b></p>
+                            <label>Title:</label><b>Intern</b></p>
                         <p>
-                            <label>Company:</label>Shopify Inc.</p>
+                            <label>Company:</label>BirdVision consultancy services</p>
                         <p>
-                            <label>Stack:</label>MySQL, Ruby on Rails, React</p>
+                            <label>Stack:</label>Analytics</p>
                         <p>
-                            <label>Time:</label>May 2019 - Present</p>
+                            <label>Time:</label>Jan 2020 - present</p>
                     </div>
                     <div>
                         <br>
@@ -161,13 +159,13 @@ Amazon Linux version 2019.09 is available.
                     <p><label>Data:</label></p>
                     <div class="block-data">
                         <p>
-                            <label>Title:</label><b>Full Stack Developer</b></p>
+                            <label>Title:</label><b>Organizer</b></p>
                         <p>
-                            <label>Company:</label>FarmLead.com</p>
+                            <label>Company:</label>TEDxMITAOE</p>
                         <p>
-                            <label>Stack:</label>MySQL, Python, Vue2, NodeJS, AWS, Salesforce</p>
+                            <label>Stack:</label>Team management</p>
                         <p>
-                            <label>Time:</label>Feb 2017 - May 2019</p>
+                            <label>Time:</label>Jan 2019 - present</p>
                     </div>
                     <div>
                         <br>
@@ -185,13 +183,13 @@ Amazon Linux version 2019.09 is available.
                     <p><label>Data:</label></p>
                     <div class="block-data">
                         <p>
-                            <label>Title:</label><b>Software Application Developer</b></p>
+                            <label>Title:</label><b>Lead</b></p>
                         <p>
-                            <label>Company:</label>i-Sight Software</p>
+                            <label>Company:</label>Developer Students Club MITAOE</p>
                         <p>
-                            <label>Stack:</label>PostgresSQL, Node.js, JS, HTML5, CSS3</p>
+                            <label>org:</label>Powered by Google Developers</p>
                         <p>
-                            <label>Time:</label>Mar 2016 - Feb 2017</p>
+                            <label>Time:</label>Jan 2019 - Present</p>
                     </div>
                     <div>
                         <br>
@@ -210,13 +208,13 @@ Amazon Linux version 2019.09 is available.
                     <p><label>Data:</label></p>
                     <div class="block-data">
                         <p>
-                            <label>Title:</label><b>Front End Developer</b></p>
+                            <label>Title:</label><b>Machine Learning intern</b></p>
                         <p>
-                            <label>Company:</label>FarmLead.com</p>
+                            <label>Company:</label>Winjit Technologies</p>
                         <p>
-                            <label>Stack:</label>Vue.js, CoffeeScript, JS, HTML5, CSS3</p>
+                            <label>Stack:</label>TensorFlow, Jupyter</p>
                         <p>
-                            <label>Time:</label>June 2016 - Nov 2016</p>
+                            <label>Time:</label>July 2018 - Sept 2018</p>
                     </div>
                     <div>
                         <br>
@@ -234,13 +232,13 @@ Amazon Linux version 2019.09 is available.
                     <p><label>Data:</label></p>
                     <div class="block-data">
                         <p>
-                            <label>Title:</label><b>Web Developer</b></p>
+                            <label>Title:</label><b>Innovation Manager</b></p>
                         <p>
-                            <label>Company:</label>Events.com</p>
+                            <label>Company:</label>REDX</p>
                         <p>
-                            <label>Stack:</label>LAMP, PHP5, JS, HTML5, CSS3</p>
+                            <label>website:</label>redx.io</p>
                         <p>
-                            <label>Time:</label>Mar 2015 - Feb 2016</p>
+                            <label>Time:</label>Jan 2019 - Present</p>
                     </div>
                     <div>
                         <br>
